--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+:root{
+    --color-dark: #222;
+    --color-light: #ddd;
+}
+
+html{
+    background-color: #eeeeee2f;
+}
+
+body{
+    box-sizing: border-box;
+    width: 1000px;
+    height: 100vh;
+    margin: 0 auto;
+    font-family: system-ui, 'Segoe UI', 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: #fff;
+}
+
+
